--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
     <title>Pizza Website</title>
 </head>
 <body>
-    
+    <h1>Welcome To Pizza Omnibus</h1>
+    <h2>OrderOnline</h2>
+    <img src="/images/pizza.jpg" alt="">
 </body>
 </html>
