--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
         </div>
         <div class=" col-md-4 img-cont">
             <h4>large</h4>
-            <img src="./images/pizza1.png" width="300px" height="300px" alt="">
+            <img src="./images/largepizza.jpg" width="300px" height="300px" alt="">
             <p><strong>Ksh.300</strong></p>
         </div>
        </div>
