--- a/index.html
+++ b/index.html
@@ -52,17 +52,17 @@
        <div class=" row img">
         <div class=" col-md-4 img-cont">
             <h4>Meat Deluxe</h4>
-            <img src="./images/pizza2.jpg" width="300px" height="300px" alt="">
+            <img src="./images/baconpizza.jpg" width="300px" height="300px" alt="">
             <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Iste a omnis, reiciendis facere in neque eaque </p>
         </div>
         <div class=" col-md-4 img-cont">
             <h4>Chicken Hawaiian </h4>
-            <img src="./images/pizza1.png" width="300px" height="300px" alt="">
+            <img src="./images/chickenpizza.jpg" width="300px" height="300px" alt="">
             <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Iste a omnis, reiciendis facere in neque eaque </p>
         </div>
         <div class=" col-md-4 img-cont">
             <h4>BBO Steak</h4>
-            <img src="./images/pizza1.png" width="300px" height="300px" alt="">
+            <img src="./images/sausagepizza.jpg" width="300px" height="300px" alt="">
             <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Iste a omnis, reiciendis facere in neque eaque </p>
         </div>
        </div>
@@ -166,7 +166,7 @@
         <div class="col-md-5 ms-5">
           <p>Get In Touch With us</p>
           <h4>Physical Address</h4>
-          <p>We are located Kimathi street,Nairobi</p>
+          <p>We are located Waiyaki street,Nairobi</p>
         </div>
         <div class="col-md-5 ms-5">
           <h3>Social media</h3>
