--- a/index.html
+++ b/index.html
@@ -43,26 +43,26 @@
             <h3>TO THE BEST PIZZA PLACE</h3>
         </div>
     </div>
-    <div class="container">
+    <div class="container text-center my-5">
       <h3>About Us</h3>
       <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Totam corporis voluptatibus reiciendis ducimus repellat laborum fuga numquam praesentium sed? Cupiditate consequuntur tempore dignissimos unde tenetur quos sequi eligendi voluptate labore.</p>
     </div>
     <div class="container">
-        <h3 class="text-center">MENU</h3>
+        <h3 class=" text-center my-4">MENU</h3>
        <div class=" row img">
-        <div class=" col-md-4 img-cont">
+        <div class=" col-md-4 img-cont ">
             <h4>Meat Deluxe</h4>
-            <img src="./images/baconpizza.jpg" width="300px" height="300px" alt="">
+            <img src="./images/pizza2.png" class="" width="300px" height="300px" alt="">
             <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Iste a omnis, reiciendis facere in neque eaque </p>
         </div>
         <div class=" col-md-4 img-cont">
             <h4>Chicken Hawaiian </h4>
-            <img src="./images/chickenpizza.jpg" width="300px" height="300px" alt="">
+            <img src="./images/pizza1.jpg" width="300px" height="300px" alt="">
             <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Iste a omnis, reiciendis facere in neque eaque </p>
         </div>
         <div class=" col-md-4 img-cont">
             <h4>BBO Steak</h4>
-            <img src="./images/sausagepizza.jpg" width="300px" height="300px" alt="">
+            <img src="./images/pizza3.png" width="300px" height="300px" alt="">
             <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Iste a omnis, reiciendis facere in neque eaque </p>
         </div>
        </div>
@@ -70,7 +70,7 @@
     <div class="container bg-white mt-5">
       <div class="pizza-order" id="pizza-form">
           <div class="head mb-5">
-              <h2 class="text-center"> Make Your Pizza Order</h2>
+              <h2 class=" pizza-order text-center position-relative"> Make Your Pizza Order</h2>
           </div>
           <form class="form mb-5">
               <div class="row form-group">
@@ -113,71 +113,77 @@
           </form>
 
       </div>
-      <div class="container">
-        <form>
-         <div class="row">
-          <div class="col-md-6">
-            <div class="input-form">
-              <label for="">Name</label>
-              <input type="text" class="form-control input-lg py-2 px-2 shadow-none mt-2">
-            </div>
-            <div class="input-form">
-              <label for="">Email</label>
-              <input type="Email" class="form-control input-lg py-2 px-2 shadow-none mt-2">
-            </div>
+      <div class="lower-section container-fluid">
+        <div class="section">
+          <div class="container-fluid">
+            <h4 class="text-center my-3">DELIVERY DETAILS</h4>
+            <form>
+             <div class="row">
+              <div class="col-md-6">
+                <div class="input-form">
+                  <label for="">Name</label>
+                  <input type="text" class="form-control input-lg py-2 px-2 shadow-none mt-2">
+                </div>
+                <div class="input-form">
+                  <label for="">Email</label>
+                  <input type="Email" class="form-control input-lg py-2 px-2 shadow-none mt-2">
+                </div>
+              </div>
+              <div class="col-md-6">
+                <div class="input-form">
+                  <label for="">Phone Number</label>
+                  <input type="number" class="form-control input-lg py-2 px-2 shadow-none mt-2">
+                </div>
+                <div class="input-form">
+                  <label for="">Location</label>
+                  <input type="text" class="form-control input-lg py-2 px-2 shadow-none mt-2">
+                </div>
+              </div>
+             </div>
+            </form>
           </div>
-          <div class="col-md-6">
-            <div class="input-form">
-              <label for="">Phone Number</label>
-              <input type="number" class="form-control input-lg py-2 px-2 shadow-none mt-2">
-            </div>
-            <div class="input-form">
-              <label for="">Location</label>
-              <input type="text" class="form-control input-lg py-2 px-2 shadow-none mt-2">
-            </div>
           </div>
-         </div>
-        </form>
-      </div>
-  </div>
-  <div class="container">
-   <div class="row">
-    <h3 class="text-center">Opening Hours -Closing Hours</h3>
-    <div class="col-md-4">
-      <p>Monday:Closed</p>
-      <p>Tuesday:Closed</p>
-      <p>Wednesday:8:00am-9:00pm</p>
-    </div>
-    <div class="col-md-4">
-      <p>Thursday:8:00am-9:00pm</p>
-      <p>Friday:8:00am-9:00pm</p>
-      <p>Saturday:8:00am-9:00pm</p>
-    </div>
-    <div class="col-md-4">
-      <p>Sunday:2:00pm-9:00pm</p>
-    </div>
-   </div>
-  </div>
-  
-  <footer>
-    <div class="containter-fluid">
-      <h3 class="text-center">Contact Us</h3>
-      <div class="row">
-        <div class="col-md-5 ms-5">
-          <p>Get In Touch With us</p>
-          <h4>Physical Address</h4>
-          <p>We are located Waiyaki street,Nairobi</p>
-        </div>
-        <div class="col-md-5 ms-5">
-          <h3>Social media</h3>
-          <i class="fab fa-facebook"></i>
-          <i class="fab fa-twitter"></i>
-          <i class="fas fa-phone"></i>
-          <i class="fab fa-instagram"></i>
-          <i class="fab fa-LinkedIn"></i>
+          <div class="container-fluid mt-5">
+          <div class="row">
+              <h3 class="text-center mb-5">Opening Hours -Closing Hours</h3>
+              <div class="col-md-4">
+                  <h4>Monday:Closed</h4>
+                  <h4>Tuesday:Closed</h4>
+                  <h4>Wednesday:8:00am-9:00pm</h4>
+              </div>
+              <div class="col-md-4">
+                  <h4>Thursday:8:00am-9:00pm</h4>
+                  <h4>Friday:8:00am-9:00pm</h4>
+                  <h4>Saturday:8:00am-9:00pm</h4>
+              </div>
+              <div class="col-md-4">
+                  <h4>Sunday:2:00pm-9:00pm</h4>
+              </div>
+          </div>
+          </div>
         </div>
       </div>
-    </div>
-  </footer>
+      
+      <footer>
+        <div class="containter-fluid py-4 text-white">
+          <h3 class="text-center">Contact Us</h3>
+          <div class="row">
+            <div class="col-md-5 ms-5 text-center">
+              <p>Get In Touch With us</p>
+              <h4>Physical Address</h4>
+              <p>We are located Kimathi street,Nairobi</p>
+            </div>
+            <div class="col-md-5 ms-5 text-center">
+              <h3>Social media</h3>
+              <i class=" ms-4 fab fa-facebook"></i>
+              <i class=" ms-4 fab fa-twitter"></i>
+              <i class=" ms-4 fas fa-phone"></i>
+              <i class=" ms-4 fab fa-instagram"></i>
+              <i class=" ms-4 fab fa-LinkedIn"></i>
+            </div>
+          </div>
+          <p class="text-center mt-3">@2022,Copyright,Rights reserved,Developed by Martha ...</p>
+        </div>
+      </footer>
 </body>
 </html>
