--- a/index.html
+++ b/index.html
@@ -57,12 +57,12 @@
         </div>
         <div class=" col-md-4 img-cont">
             <h4>Chicken Hawaiian </h4>
-            <img src="./images/pizza1.jpg" width="300px" height="300px" alt="">
+            <img src="./images/chickenpizza.jpg" width="300px" height="300px" alt="">
             <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Iste a omnis, reiciendis facere in neque eaque </p>
         </div>
         <div class=" col-md-4 img-cont">
             <h4>BBO Steak</h4>
-            <img src="./images/pizza3.png" width="300px" height="300px" alt="">
+            <img src="./images/sausagepizza.jpg" width="300px" height="300px" alt="">
             <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Iste a omnis, reiciendis facere in neque eaque </p>
         </div>
        </div>
