--- a/index.html
+++ b/index.html
@@ -182,7 +182,7 @@
               <i class=" ms-4 fab fa-LinkedIn"></i>
             </div>
           </div>
-          <p class="text-center mt-3">@2022,Copyright,Rights reserved,Developed by Martha ...</p>
+          <p class="text-center mt-3">@2022,Copyright,Rights reserved,Developed by James Musembi</p>
         </div>
       </footer>
 </body>
