--- a/index.html
+++ b/index.html
@@ -171,7 +171,7 @@
             <div class="col-md-5 ms-5 text-center">
               <p>Get In Touch With us</p>
               <h4>Physical Address</h4>
-              <p>We are located Kimathi street,Nairobi</p>
+              <p>We are located Waiyaki street,Nairobi</p>
             </div>
             <div class="col-md-5 ms-5 text-center">
               <h3>Social media</h3>
