--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
     </div>
     <div class="container text-center my-5">
       <h3>About Us</h3>
-      <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Totam corporis voluptatibus reiciendis ducimus repellat laborum fuga numquam praesentium sed? Cupiditate consequuntur tempore dignissimos unde tenetur quos sequi eligendi voluptate labore.</p>
+      <p>A Pizza App pizza box might be one of the most recognisable icons of Africa. Whichever way you slice it, Pizza Inn is an industry leader in the quick service pizza game. The first Pizza Inn outlet opened its doors in 1994 in Waiyaki, Kenya, and rose quickly in popularity. Serving hot oven-fresh pizza with its signature all-natural tomato sauce and using only the freshest ingredients, Pizza Inn has established itself at the top of the industry and is easily one of the first choices in quick service pizza in Africa</p>
     </div>
     <div class="container">
         <h3 class=" text-center my-4">MENU</h3>
@@ -175,11 +175,11 @@
             </div>
             <div class="col-md-5 ms-5 text-center">
               <h3>Social media</h3>
-              <i class=" ms-4 fab fa-facebook"></i>
-              <i class=" ms-4 fab fa-twitter"></i>
-              <i class=" ms-4 fas fa-phone"></i>
-              <i class=" ms-4 fab fa-instagram"></i>
-              <i class=" ms-4 fab fa-LinkedIn"></i>
+              <img src="./images/facebook.png" alt="">
+              <img src="./images/instagram.jpg" alt="">
+              <img src="./images/twitter.png" alt="">
+              <img src="./images/phone.png" alt="">
+              <img src="./images/linkedin.png" alt="">
             </div>
           </div>
           <p class="text-center mt-3">@2022,Copyright,Rights reserved,Developed by James Musembi</p>
