--- a/index.html
+++ b/index.html
@@ -221,8 +221,8 @@
           </div>
           <div class="col-md-4">
             <h4>Contact Us</h4>
-            <p>+254 7 00 000 000</p>
-            <p>myemail@gmail.com</p>
+            <p>+254 7 094 890 674</p>
+            <p>app.pizza@gmail.com</p>
           </div>
           <div class="col-md-4 text-center">
             <h3>Social media</h3>
@@ -234,7 +234,7 @@
           </div>
         </div>
         <div class="py-3">
-          <p class="text-center m-0 p-0">@2022,Copyright,Rights reserved,Developed by Martha ...</p>
+          <p class="text-center m-0 p-0">@2022,Copyright,Rights reserved,Developed by James Musembi</p>
         </div>
       </div>
     </footer>
