--- a/index.html
+++ b/index.html
@@ -217,7 +217,7 @@
           <div class="col-md-4">
             <h4>Physical Address</h4>
             <p>Get In Touch With us</p>
-            <p>We are located Kimathi street,Nairobi</p>
+            <p>We are located Waiyaki street,Nairobi</p>
           </div>
           <div class="col-md-4">
             <h4>Contact Us</h4>
