--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
     </div>
     <div class="text-center my-5">
       <h3>About Us</h3>
-      <p></p>
+      <p>A Pizza App pizza box might be one of the most recognisable icons of Africa. Whichever way you slice it, Pizza Inn is an industry leader in the quick service pizza game. The first Pizza Inn outlet opened its doors in 1994 in Waiyaki, Kenya, and rose quickly in popularity. Serving hot oven-fresh pizza with its signature all-natural tomato sauce and using only the freshest ingredients, Pizza Inn has established itself at the top of the industry and is easily one of the first choices in quick service pizza in Africa</p>
     </div>
   </div>
 
